@@ -2,8 +2,9 @@ gcl (2.6.1-24) unstable; urgency=low
 
   * Revert unixport/makefile link order fix for windows, breaks
     compiler::link, find another way
+  * runtime SGC fault recovery test
 
- -- Camm Maguire <camm@enhanced.com>  Wed, 11 Feb 2004 19:12:41 -0500
+ -- Camm Maguire <camm@enhanced.com>  Thu, 12 Feb 2004 05:22:06 +0000
 
 gcl (2.6.1-23) unstable; urgency=low
 
